# product-ops-sandbox-public

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE.md  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt  tasks.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
agent-skills/: README.md
ai-workflows/: README.md
docs/: 00-product-ops-system-map.md  01-product-context.md  02-success-metrics.md  03-how-to-run-the-workflows.md  04-api-extension.md  05-planning-loop.md  06-adapt-this-sandbox.md  07-customer-onboarding-user-flow.md
input-notes/: README.md  support-ticket-batch.md  user-interview-transcript.md  weekly-product-ops-packet.md
outputs/: README.md  ai_feedback_classification.json  ai_feedback_classification.md  ai_okr_alignment.json  ai_okr_alignment.md  ai_opportunity_map.json  ai_opportunity_map.md  ai_release_measurement_plan.md  ai_research_synthesis.md  ai_weekly_product_insights.md  feedback_theme_summary.md  metrics_snapshot.md  okr_snapshot.md  release_readiness_snapshot.md  roadmap_priority_scores.md
sample-data/: customer_feedback.csv  okrs.csv  product_events.csv  releases.csv  roadmap_items.csv
scripts/: ai_align_okrs.py  ai_classify_feedback.py  ai_common.py  ai_detect_opportunities.py  ai_generate_weekly_summary.py  ai_plan_release_measurement.py  ai_real.py  ai_review_product_planning.py  ai_synthesize_research.py  ai_weekly_product_insights.py  analyze_feedback.py  harness.py  (+4 more)
(+72 files in other folders)
